# easy-mcp-proxy

./: .gitignore  README.md  config.yaml  config.yaml.example  pyproject.toml
.github/workflows/: ci.yml
docs/: MEMORY.md  index.md  reference.md  tool-discovery.md  tutorial.md  use-cases.md
docs/decisions/: 009-output-caching-and-documentation.md
examples/rlm_demo/: Dockerfile  README.md  generate_logs.py  log_tools.py  logs.ndjson  requirements.txt  run_experiment.py  test_docker.py
mcp_memory/: __init__.py  cli.py  models.py  search.py  server.py  storage.py
mcp_memory/server/: __init__.py  artifact_tools.py  concept_tools.py  core.py  episode_tools.py  instructions.py  project_tools.py  reflection_tools.py  skill_tools.py  thread_tools.py  utils.py
mcp_memory/storage/: __init__.py  artifact.py  base.py  concept.py  episode.py  project.py  (+3 more)
mcp_proxy/: auth.py  cache.py  cli.py  config.py  custom_tools.py  debug.py  exceptions.py  hooks.py  models.py  parallel.py  proxy.py  search.py  upstream_errors.py  utils.py  views.py  web_ui.py  web_ui_templates.py
tests/: conftest.py  helpers.py  test_auth.py  test_cache.py  test_cli.py  test_cli_registry.py  test_config.py  test_custom_tools.py  test_debug.py  test_documented_discovery.py  test_exceptions.py  test_hooks.py  test_http_views.py  test_integration_features.py  test_integration_http.py  test_models.py  test_parallel.py  test_proxy.py  test_proxy_main.py  test_search.py  test_tool_registry_web.py  test_tools_sandbox.py  test_unimplemented_features.py  test_upskill_e2e.py  test_views.py  test_web_ui.py
(+53 files in other folders)
